fixed white space issue

--- a/anyworkx_frontend/assets/scss/4-layout/_siteMainContent.scss
+++ b/anyworkx_frontend/assets/scss/4-layout/_siteMainContent.scss
@@ -702,6 +702,13 @@
   padding: 0 24px;
   max-width: 900px;
   margin: auto;
+  pre{
+    white-space: pre-wrap;
+    font-size: inherit;
+    font-family: inherit;
+    font-weight: inherit;
+    line-height: 1.3;
+  }
   h1 {
     margin-bottom: 24px;
   }
