--- a/anyworkx_frontend/assets/scss/main.css
+++ b/anyworkx_frontend/assets/scss/main.css
@@ -1136,6 +1136,13 @@ nav .nav--items__container a.active {
   max-width: 900px;
   margin: auto;
 }
+.job-description-section pre {
+  white-space: pre-wrap;
+  font-size: inherit;
+  font-family: inherit;
+  font-weight: inherit;
+  line-height: 1.3;
+}
 .job-description-section h1 {
   margin-bottom: 24px;
 }
